fixed overflow on x-axis

--- a/frontend_practice/Ableton_Page/push_page/styles.css
+++ b/frontend_practice/Ableton_Page/push_page/styles.css
@@ -5,6 +5,13 @@
     margin: 0; 
     box-sizing: border-box;
 }
+body{
+    overflow-x: hidden;
+}
+html{
+    margin:0;
+    overflow-x: hidden;
+}
 @media only screen and (min-width: 350px){
     header{
         width: 100vw;
@@ -305,6 +312,7 @@
         height: 30px;
         line-height: 25px;
         height: 37px;
+        border-radius: 10px;
     }
     .price-2{
         margin-top: 110px;
@@ -332,5 +340,75 @@
         margin-left: 5px;
         margin-right: 5px;
         width: 12px;
+    }
+    .submit{
+        background-color: blue;
+        color: white;
+    }
+    footer input{
+        height: 30px;
+    }
+    .platforms{
+        padding-inline-start: 0px;
+    }
+    .platforms ul{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        text-decoration: none;
+        padding-inline-start: 0px;
+    }
+    .platforms li{
+        text-decoration: none;
+        list-style-type: none;
+    }
+    .langloc{
+        text-align: left;
+    }
+    .langloc select{
+        display: block;
+        height: 30px;
+        background-color: #ddd;
+    }
+    .location{
+        width: 50%;
+    }
+    .logo-footer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    .logo-footer .logo-pic{
+        height: 40px;
+        width: 46px;
+    }
+}
+@media only screen and (min-width: 720px){
+    .logo{
+        display: inline;
+        width: 10vw;
+        height: 11vh;
+        vertical-align: middle;
+        padding-top: 10px;
+    }
+    .logo img{
+        width: 9vw;
+    }
+    .video-container{
+        height: 100vh;
+    }
+    .content-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        row-gap: 10px;
+        column-gap: 20px;
+    }
+    .cell-1{
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    .indented video{
+        height: 100%;
     }
 }
